<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LoginActivity">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="349dp"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/colorPrimary"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/login_edit_text_space"
            android:paddingRight="@dimen/login_edit_text_space"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="347dp"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/colorPrimary"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/login_edit_text_space"
            android:paddingRight="@dimen/login_edit_text_space"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <Button
            android:text="@string/login_sign_in"
            android:layout_width="294dp"
            android:layout_height="56dp"
            android:id="@+id/buttonSignIn"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/login_text_xl_size"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/button_bleu"/>

        <TextView
            android:text="Mot de passe perdu"
            android:layout_width="170dp"
            android:layout_height="32dp" android:id="@+id/textViewForgotPassword"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/login_text_xl_size"/>

        <Button
            android:text="@string/login_sign_in_google"
            android:layout_width="294dp"
            android:layout_height="56dp"
            android:id="@+id/login_sign_in_google"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/login_text_xl_size"
            android:background="@drawable/button_rouge"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewForgotPassword"
            app:layout_constraintHorizontal_bias="0.509"/>

        <Button
            android:text="@string/login_sign_up"
            android:layout_width="350dp"
            android:layout_height="57dp"
            android:id="@+id/buttonSignUp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/login_text_xl_size"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/button_bleu" app:layout_constraintHorizontal_bias="0.49"
            android:layout_marginTop="112dp" app:layout_constraintTop_toBottomOf="@+id/login_sign_in_google"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
