<?xml version="1.0" encoding="utf-8"?>

<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorPrimaryDark"
tools:context=".activities.ForgotPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="349dp"
        android:layout_height="@dimen/login_edit_text_height"
        android:layout_marginTop="328dp"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/login_text_size"
        android:background="@drawable/edittext_arrondi"
        android:paddingLeft="@dimen/login_edit_text_space"
        android:paddingRight="@dimen/login_edit_text_space"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"/>

    <Button
        android:text="@string/login_forgot_password"
        android:layout_width="294dp"
        android:layout_height="56dp"
        android:id="@+id/buttonForgot"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/login_text_xl_size"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/button_bleu" app:layout_constraintHorizontal_bias="0.49"
        android:layout_marginTop="52dp" app:layout_constraintTop_toBottomOf="@+id/editTextEmail"/>


    <Button
        android:text="@string/login_go_login"
        android:layout_width="294dp"
        android:layout_height="56dp"
        android:id="@+id/buttonGoLogIn"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/login_text_xl_size"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/button_blanc" app:layout_constraintHorizontal_bias="0.49"
        android:layout_marginTop="164dp" app:layout_constraintTop_toBottomOf="@+id/buttonForgot"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>